# pymcuprog-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pymcuprog_mcp/: config.py  server.py  session.py
tests/: test_config.py  test_server.py
